--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,43 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Heaps</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+	<head>
+		<title>Heaps</title>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
-  </head>
+	<!--
+	
+	Hello there, explorer!
+	Visit https://github.com/SumukhPrasad/Heaps to see the source code.
 
-  <body>
-    <%= yield %>
-  </body>
+	 -->
+
+		<meta name="viewport" content="width=device-width,initial-scale=1">
+
+
+		<%= csrf_meta_tags %>
+		<%= csp_meta_tag %>
+
+		<%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+		<%= javascript_importmap_tags %>
+	</head>
+
+	<body>
+
+	<% if user_signed_in? %>
+	<%= render :partial => "layouts/useractions" %>
+	<main>
+	<% end %>
+
+		<% if notice %>
+			<p class="alert alert-success"><%= notice %></p>
+		<% end %>
+		<% if alert %>
+			<p class="alert alert-danger"><%= alert %></p>
+		<% end %>
+		<%= yield %>
+
+	<% if user_signed_in? %>	
+	</main>
+	<% end %>
+
+	</body>
 </html>
