--- a/app/views/layouts/_useractions.html.erb
+++ b/app/views/layouts/_useractions.html.erb
@@ -1,4 +1,4 @@
 
-<%= link_to "Home", root_path %>
-<%= link_to "Edit profile", edit_user_registration_path %>
+<%= link_to "Home", root_path %> | 
+<%= link_to "Edit profile", edit_user_registration_path %> | 
 <%= link_to "Logout", destroy_user_session_path %>
