--- a/app/views/heaps/show.html.erb
+++ b/app/views/heaps/show.html.erb
@@ -1,14 +1,1 @@
-<table border="0" cellspacing="5" cellpadding="5">
-  <tr>
-  <% @csv.headers.each do |header| %>
-    <th><%= header %></th>
-  <% end %> 
-  </tr>
-  <% @csv.each do |row| %>
-    <tr>
-    <% row.each do |element| %>
-      <td><%= element[1] %></td>
-    <% end %>
-    </tr>
-  <% end %> 
-</table>
+<%= render :partial => 'entry', :locals => {:row => @row} %>
