--- a/app/views/heaps/show.html.erb
+++ b/app/views/heaps/show.html.erb
@@ -1,5 +1,5 @@
 <%= render :partial => 'entry', :locals => {:row => @row} %>
 
 <center>
-<%= link_to_if @prevpage>0, "< Back", :page => @prevpage %> | Heaps. | <%= link_to_if @nextpage>0, "Next >", :page => @nextpage %>
+<%= link_to_if @prevpage>0, "< Back", :page => @prevpage %> | accept -- reject | <%= link_to_if @nextpage>0, "Next >", :page => @nextpage %>
 </center>
