--- a/app/views/heaps/show.html.erb
+++ b/app/views/heaps/show.html.erb
@@ -1,5 +1,7 @@
 <%= render :partial => 'entry', :locals => {:row => @row} %>
 
 <center>
-<%= link_to_if @prevpage>0, "< Back", :page => @prevpage %> | accept -- reject | <%= link_to_if @nextpage>0, "Next >", :page => @nextpage %>
+<p><%= button_to "ACCEPT", root_path, :style => "color: green; font-weight: bold; line-height: 1.5" %> <%= button_to "REJECT", root_path, :style => "color: red; font-weight: bold; line-height: 1.5" %></p>
+
+<p><%= link_to_if @prevpage>0, "< Back", :page => @prevpage %> | Viewing entry <%= @current %> of <%= @total %> | <%= link_to_if @nextpage>0, "Next >", :page => @nextpage %></p>
 </center>
