--- a/app/views/forms/show.html.erb
+++ b/app/views/forms/show.html.erb
@@ -5,4 +5,4 @@
 
 <%= button_to "Delete", form_path(@form.id), data: { turbo_confirm: "Are you sure you want to delete this form?\n\n This action is irreversible." }, method: :delete %>
 
-<%= link_to "Heap", heap_path(@form.id) %>
+<%= link_to "Heap", heap_path(@form.id, :page => 1) %>
