--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,6 +1,7 @@
 <% if user_signed_in? %>
 	<%= render "indexpage" %>
 <% else %>
-		<%= link_to "Sign In", new_user_session_path %>
-		<p>New user? <%= link_to "Sign Up", new_user_registration_path %></p>
+	<h1><i>Heaps</i></h1>
+	<%= link_to "Sign In", new_user_session_path %>
+	<p>New user? <%= link_to "Sign Up", new_user_registration_path %></p>
 <% end %>
