--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,10 +28,10 @@
 	<% end %>
 
 		<% if notice %>
-			<p class="alert alert-success"><%= notice %></p>
+			<p style="padding: 5px; border: 2px dotted #555; color: darkgreen;"><i><%= notice %></i></p>
 		<% end %>
 		<% if alert %>
-			<p class="alert alert-danger"><%= alert %></p>
+			<p style="padding: 5px; border: 2px dotted #555; color: red;"><i><%= alert %></i></p>
 		<% end %>
 		<%= yield %>
 
