--- a/app/views/forms/show.html.erb
+++ b/app/views/forms/show.html.erb
@@ -1,8 +1,37 @@
 <h1>Form "<%= @form.name %>"</h1>
 
-<%= @form.name %>
-<%= @form.file %>
+<table>
+     <tr>
+          <td><span style="color: green; font-weight: bold; font-style: italic;">Accepted</span></td>
+          <td>--</td>
+          <td>
+               <% @form.heap.accepted_indices.split(",") do |i| %>
+                    <%= link_to i.to_i+1, heap_path(@form.id, :page => i.to_i+1) %>
+               <% end %>
+          </td>
+     </tr>
+     <tr>
+          <td><span style="color: #007cff; font-weight: bold; font-style: italic;">Waitlisted</span></td>
+          <td>--</td>
+          <td>
+               <% @form.heap.waitlisted_indices.split(",") do |i| %>
+                    <%= link_to i.to_i+1, heap_path(@form.id, :page => i.to_i+1) %>
+               <% end %>
+          </td>
+     </tr>
+     <tr>
+          <td><span style="color: red; font-weight: bold; font-style: italic;">Rejected</span></td>
+          <td>--</td>
+          <td>
+               <% @form.heap.rejected_indices.split(",") do |i| %>
+                    <%= link_to i.to_i+1, heap_path(@form.id, :page => i.to_i+1) %>
+               <% end %>
+          </td>
+     </tr>
+</table>
+<%= link_to "Start Heaping", heap_path(@form.id, :page => 1) %>
 
+<h2 style="color: red; margin-bottom: 0; margin-top: 25px; font-style: italic;">Delete</h2>
+This action is irreversible.
 <%= button_to "Delete", form_path(@form.id), data: { turbo_confirm: "Are you sure you want to delete this form?\n\n This action is irreversible." }, method: :delete %>
 
-<%= link_to "Heap", heap_path(@form.id, :page => 1) %>
